Creating site for 0.1-SNAPSHOT

--- a/surefire-report.html
+++ b/surefire-report.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="http://netdna.bootstrapcdn.com/bootswatch/2.2.2/united/bootstrap.min.css" rel="stylesheet" />
+		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/bootswatch.css" rel="stylesheet" />
+		<link href="./css/docs.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		
@@ -104,7 +104,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>30.701</td> 
+    <td>30.433</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -137,7 +137,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>15.377</td> 
+    <td>15.256</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.interceptor">io.fixture.interceptor</a></td> 
@@ -146,7 +146,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.046</td> 
+    <td>0.038</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.controller">io.fixture.controller</a></td> 
@@ -155,7 +155,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.028</td> 
+    <td>0.026</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.repository">io.fixture.repository</a></td> 
@@ -164,7 +164,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>15.218</td> 
+    <td>15.081</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.domain">io.fixture.domain</a></td> 
@@ -204,7 +204,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.136</td> 
+     <td>5.1</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.securityPersistentTokenRepositoryImplTest"><i class="icon-ok"></i></a></td> 
@@ -214,7 +214,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.093</td> 
+     <td>5.057</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.securityUserDetailsManagerImplTest"><i class="icon-ok"></i></a></td> 
@@ -224,7 +224,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.148</td> 
+     <td>5.099</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -254,7 +254,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.046</td> 
+     <td>0.038</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -284,7 +284,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.01</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.controllerSecureControllerTest"><i class="icon-ok"></i></a></td> 
@@ -294,7 +294,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.005</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.controllerStaticControllerTest"><i class="icon-ok"></i></a></td> 
@@ -304,7 +304,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.013</td> 
+     <td>0.01</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -334,7 +334,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.085</td> 
+     <td>5.034</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.repositoryPersistentLoginRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -344,7 +344,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.054</td> 
+     <td>5.014</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -354,7 +354,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.079</td> 
+     <td>5.033</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -403,7 +403,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.01</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -421,7 +421,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.005</td> 
+     <td>0.01</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -434,7 +434,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAccessDenied</td> 
-     <td>0.013</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -500,7 +500,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandleWithNullThemeName</td> 
-     <td>0.044</td> 
+     <td>0.037</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -510,7 +510,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandleWithLastTheme</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -528,12 +528,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithSingleUser</td> 
-     <td>5.02</td> 
+     <td>4.974</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllNames</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -548,12 +548,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithMultipleUsers</td> 
-     <td>0.005</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.021</td> 
+     <td>0.014</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -563,12 +563,12 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithInvalidName</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidName</td> 
-     <td>0.005</td> 
+     <td>0.004</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -581,7 +581,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUnknownUser</td> 
-     <td>5.022</td> 
+     <td>4.976</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -591,7 +591,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.007</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -601,12 +601,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidSeries</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithOnePersistentLogin</td> 
-     <td>0.011</td> 
+     <td>0.014</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -619,7 +619,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>5.036</td> 
+     <td>4.991</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -629,27 +629,27 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithGroupsAndPersistentLogins</td> 
-     <td>0.015</td> 
+     <td>0.016</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidUsername</td> 
-     <td>0.004</td> 
+     <td>0.003</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.006</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExists</td> 
-     <td>0.005</td> 
+     <td>0.004</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithInvalidUsername</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -662,7 +662,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddUserToGroup</td> 
-     <td>5.067</td> 
+     <td>5.023</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -672,17 +672,17 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindGroupAuthorities</td> 
-     <td>0.008</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateGroup</td> 
-     <td>0.01</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRenameGroup</td> 
-     <td>0.008</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -692,12 +692,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindUsersInGroup</td> 
-     <td>0.005</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserFromGroup</td> 
-     <td>0.01</td> 
+     <td>0.014</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -707,7 +707,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllGroups</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -720,7 +720,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateToken</td> 
-     <td>5.061</td> 
+     <td>5.026</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -730,7 +730,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateNewToken</td> 
-     <td>0.019</td> 
+     <td>0.018</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -748,37 +748,37 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsernameWithInvalidUsername</td> 
-     <td>5.024</td> 
+     <td>4.979</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsername</td> 
-     <td>0.022</td> 
+     <td>0.02</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthentication</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateUser</td> 
-     <td>0.025</td> 
+     <td>0.023</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerSetsAuthentication</td> 
-     <td>0.012</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerChangesPassword</td> 
-     <td>0.009</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthenticationManagerChangesPassword</td> 
-     <td>0.008</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -788,17 +788,17 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateUser</td> 
-     <td>0.013</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteUser</td> 
-     <td>0.008</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUserExistsWithInvalidUsername</td> 
-     <td>0.006</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
