--- a/project-reports.html
+++ b/project-reports.html
@@ -91,26 +91,30 @@
      <td>Dependency analysis of the project (used declared, used undeclared, unused declared)</td> 
     </tr> 
     <tr class="b"> 
+     <td><a href="linkcheck.html">Linkcheck</a></td> 
+     <td>This is a link to the Linkcheck report.</td> 
+    </tr> 
+    <tr class="a"> 
      <td><a href="surefire-report.html">Surefire Report</a></td> 
      <td>Report on the test results of the project.</td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><a href="jdepend-report.html">JDepend</a></td> 
      <td>JDepend traverses Java class file directories and generates design quality metrics for each Java package. JDepend allows you to automatically measure the quality of a design in terms of its extensibility, reusability, and maintainability to manage package dependencies effectively.</td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><a href="third-party-report.html">Third Parties</a></td> 
      <td>Provides details of third parties of the project.</td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><a href="property-updates-report.html">Property Updates Report</a></td> 
      <td>Provides details of properties which control versions of dependencies and/or plugins, and indicates any newer versions which are available.</td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><a href="plugin-updates-report.html">Plugin Updates Report</a></td> 
      <td>Provides details of the plugins used by this project which have newer versions available.</td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><a href="dependency-updates-report.html">Dependency Updates Report</a></td> 
      <td>Provides details of the dependencies which have updated versions available.</td> 
     </tr> 
