--- a/project-summary.html
+++ b/project-summary.html
@@ -13,11 +13,12 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="./css/docs.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
+		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
 		
 		<link href="./css/lightbox.css" rel="stylesheet" />
 		
@@ -43,6 +44,68 @@
 					</a>
 					<div class="nav-collapse">
 						<ul class="nav pull-right">
+							<li><a href="http://github.com/martinlau/fixture" title="GitHub project" class="externalLink">GitHub project </a></li>
+							<li class="dropdown active">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Project reports <b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li class="dropdown-submenu">
+										<a href="project-info.html" title="Project Information">Project Information </a>
+										<ul class="dropdown-menu">
+											<li><a href="index.html" title="About">About </a></li>
+											<li><a href="plugin-management.html" title="Plugin Management">Plugin Management </a></li>
+											<li><a href="distribution-management.html" title="Distribution Management">Distribution Management </a></li>
+											<li><a href="dependency-info.html" title="Dependency Information">Dependency Information </a></li>
+											<li><a href="source-repository.html" title="Source Repository">Source Repository </a></li>
+											<li><a href="mail-lists.html" title="Mailing Lists">Mailing Lists </a></li>
+											<li><a href="issue-tracking.html" title="Issue Tracking">Issue Tracking </a></li>
+											<li><a href="integration.html" title="Continuous Integration">Continuous Integration </a></li>
+											<li><a href="plugins.html" title="Project Plugins">Project Plugins </a></li>
+											<li><a href="license.html" title="Project License">Project License </a></li>
+											<li><a href="dependency-management.html" title="Dependency Management">Dependency Management </a></li>
+											<li><a href="team-list.html" title="Project Team">Project Team </a></li>
+											<li class="active"><a href="" title="Project Summary">Project Summary </a></li>
+											<li><a href="dependencies.html" title="Dependencies">Dependencies </a></li>
+										</ul>
+									</li>
+									<li class="dropdown-submenu">
+										<a href="project-reports.html" title="Project Reports">Project Reports </a>
+										<ul class="dropdown-menu">
+											<li><a href="dev-activity.html" title="Developer Activity">Developer Activity </a></li>
+											<li><a href="file-activity.html" title="File Activity">File Activity </a></li>
+											<li><a href="changelog.html" title="Change Log">Change Log </a></li>
+											<li><a href="dependency-analysis.html" title="Dependency Analysis">Dependency Analysis </a></li>
+											<li><a href="surefire-report.html" title="Surefire Report">Surefire Report </a></li>
+											<li><a href="jdepend-report.html" title="JDepend">JDepend </a></li>
+											<li><a href="third-party-report.html" title="Third Parties">Third Parties </a></li>
+											<li><a href="property-updates-report.html" title="Property Updates Report">Property Updates Report </a></li>
+											<li><a href="plugin-updates-report.html" title="Plugin Updates Report">Plugin Updates Report </a></li>
+											<li><a href="dependency-updates-report.html" title="Dependency Updates Report">Dependency Updates Report </a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">In the box <b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="http://kotlin.jetbrains.org" title="Kotlin" class="externalLink">Kotlin </a></li>
+									<li><a href="http://springsource.org/spring-framework" title="Spring Framework" class="externalLink">Spring Framework </a></li>
+									<li><a href="http://springsource.org/spring-data/jpa" title="Spring Data JPA" class="externalLink">Spring Data JPA </a></li>
+									<li><a href="http://springsource.org/spring-data/rest" title="Spring Data REST" class="externalLink">Spring Data REST </a></li>
+									<li><a href="http://springsource.org/spring-security" title="Spring Security" class="externalLink">Spring Security </a></li>
+									<li><a href="http://hibernate.org" title="Hibernate" class="externalLink">Hibernate </a></li>
+									<li><a href="http://liquibase.org" title="Liquibase" class="externalLink">Liquibase </a></li>
+									<li><a href="http://ehcache.org" title="Ehcache" class="externalLink">Ehcache </a></li>
+									<li><a href="http://tiles.apache.org" title="Tiles" class="externalLink">Tiles </a></li>
+									<li><a href="http://wro4j.googlecode.com" title="Wro4j" class="externalLink">Wro4j </a></li>
+									<li><a href="http://sass-lang.com" title="SASS" class="externalLink">SASS </a></li>
+									<li><a href="http://coffeescript.org" title="CoffeeScript" class="externalLink">CoffeeScript </a></li>
+									<li><a href="http://webjars.org" title="WebJARs" class="externalLink">WebJARs </a></li>
+									<li><a href="http://twitter.github.io/bootstrap" title="Bootstrap" class="externalLink">Bootstrap </a></li>
+									<li><a href="http://bootswatch.com" title="Bootswatch" class="externalLink">Bootswatch </a></li>
+									<li><a href="http://cukes.info" title="Cucumber" class="externalLink">Cucumber </a></li>
+									<li><a href="https://code.google.com/p/selenium" title="Selenium WebDriver" class="externalLink">Selenium WebDriver </a></li>
+								</ul>
+							</li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</div>
@@ -53,6 +116,16 @@
 	
 	<!-- Masthead
 	================================================== -->
+	<header class="jumbotron subhead">
+		<div class="row" id="banner">
+			<div class="span12">
+				<div class="pull-left">
+					<a href="./" id="bannerLeft"><h1>fixture</h1></a>
+				</div>
+				<div class="pull-right">
+				</div>
+			</div>
+		</div>
 	</header>
 
 	<div class="main-body">
@@ -81,7 +154,7 @@
     </tr> 
     <tr class="a"> 
      <td>Description</td> 
-     <td>-</td> 
+     <td>A non-java JVM application (using Spring, Hibernate, SLF4J, EhCache, Kotlin) for the non-CSS and non-Javascript web (using SASS and CoffeeScript).</td> 
     </tr> 
     <tr class="b"> 
      <td>Homepage</td> 
@@ -142,6 +215,10 @@
 	<footer class="well">
 		<div class="container">
 			<div class="row">
+				<div class="span9 bottom-nav">
+					<ul class="nav nav-list">
+					</ul>
+				</div>
 			</div>
 		</div>
 	</footer>
@@ -152,7 +229,6 @@
 				<p class="pull-right"><a href="#">Back to top</a></p>
 				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-05. </span></p>
-				<p><a href="http://github.com/andriusvelykis/reflow-maven-skin" title="Reflow Maven skin">Reflow Maven skin</a> by <a href="http://andrius.velykis.lt" target="_blank" title="Andrius Velykis">Andrius Velykis</a>.</p>
 			</div>
 		</div>
 	</div>
@@ -163,7 +239,7 @@
 
 	<!-- Fallback jQuery loading from Google CDN:
 	     http://stackoverflow.com/questions/1014203/best-way-to-use-googles-hosted-jquery-but-fall-back-to-my-hosted-library-on-go -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript">
 		if (typeof jQuery == 'undefined')
 		{
@@ -171,11 +247,12 @@
 		}
 	</script>
 	
-	<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 	<script src="./js/lightbox.js"></script>
 	<script src="./js/jquery.smooth-scroll.min.js"></script>
 	<!-- back button support for smooth scroll -->
 	<script src="./js/jquery.ba-bbq.min.js"></script>
+	<script src="//yandex.st/highlightjs/7.3/highlight.min.js"></script>
 
 	<script src="./js/reflow-skin.js"></script>
 	
